tests/baselines/reference/noTypeArgumentOnReturnType1.errors.txt
==== tests/cases/compiler/noTypeArgumentOnReturnType1.ts (1 errors) ====
    class A<T>{
     
     foo(): A{
            ~
!!! error TS2173: Generic type references must include all type arguments.
      return null;
     }
    }